Bug 788005 - Work around Vista's higher latency requirements in WinMM.  r=doublec